--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index page</title>
+    <title>student bio</title>
 </head>
 <body>
-    doot doot doo here's some text
+    <h1>student bio</h1>
+    <h2>Brigid Winitsky</h2>
+    <img alt="" src="img/0119211813.jpg">
+    <p>
+        Brigid Winitsky is a student currently enrolled in a full stack web development bootcamp. She is also a published poet, amateur visual artist, and sort of a musician I guess.
+    </p>
+    <h1>contact info</h1>
+    <ul>
+        <li>email: <jmwinitsky@gmail class="com">jmwinitsky@gmail.com</jmwinitsky@gmail></li>
+        <li>github: bnemeton</li>
+        <li>portfolio: <a href="www.google.com">just google actually</a></li>
+    </ul>
 </body>
 </html>
