added styling using CSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>student bio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>student bio</h1>
+    <h1 class="headline">student bio</h1>
     <h2>Brigid Winitsky</h2>
     <img alt="" src="img/0119211813.jpg">
     <p>
